package com.management;

public interface Form {
    boolean isDataInFormat();
}
